--- a/files/var/lib/guest/name/.asoundrc.j2
+++ b/files/var/lib/guest/name/.asoundrc.j2
@@ -6,8 +6,8 @@ pcm_type.piper {
 
 pcm.piper {
   type piper
-  playback {{ playback_file }}
-  capture {{ capture_file }}
+  playback {{ piper_playback_file }}
+  capture {{ piper_capture_file }}
 }
 
 {% endblock %}
