--- a/files/guest.instances.inc.j2
+++ b/files/guest.instances.inc.j2
@@ -11,8 +11,6 @@
 {%- set bios_file = data_directory ~ '/OVMF_VARS.fd' -%}
 {%- set monitor_socket = socket_directory ~ '/monitor' -%}
 {%- set spice_socket = socket_directory ~ '/spice' -%}
-{%- set playback_file = socket_directory ~ '/playback' -%}
-{%- set capture_file = socket_directory ~ '/capture' -%}
 
 {%- set temp_buses = namespace(items=[], index=4) -%}
 {%- set temp_cards = namespace(items=[], memory=0, index=0) -%}
@@ -84,15 +82,24 @@
 {%- set memory_hole = memory_size + temp_cards.memory -%}
 {%- set memory_prealloc = item[0].memory_prealloc|default(4) -%}
 
+{%- set sound_hardware = item[0].sound_hardware -%}
+
 {%- set looking_glass = item[0].looking_glass|default(true) -%}
 {%- set looking_glass_file = ivshmem_directory ~ '/looking_glass' -%}
 {%- set looking_glass_size = 32 -%}
 
-{%- set audio_format = "S16_LE" -%}
-{%- set audio_rate = 44100 -%}
-{%- set audio_channels = 2 -%}
-{%- set audio_period_time = 10 -%}
-{%- set audio_period_size = (audio_rate * audio_period_time / 1000)|int -%}
+{%- set piper = item[0].piper|default(true) -%}
+{%- set piper_playback_file = socket_directory ~ '/playback' -%}
+{%- set piper_capture_file = socket_directory ~ '/capture' -%}
+{%- set piper_format = "S16_LE" -%}
+{%- set piper_rate = 44100 -%}
+{%- set piper_channels = 2 -%}
+{%- set piper_period_time = 10 -%}
+{%- set piper_period_size = (piper_rate * piper_period_time / 1000)|int -%}
+
+{%- set scream = item[0].scream|default(true) -%}
+{%- set scream_file = ivshmem_directory ~ '/scream' -%}
+{%- set scream_size = 2 -%}
 
 {%- set buses = temp_buses.items -%}
 {%- set cards = temp_cards.items -%}
