Enhance Guest Viewer Script

--- a/files/guest.instances.inc.j2
+++ b/files/guest.instances.inc.j2
@@ -1,5 +1,6 @@
 
 {%- set name = item[0].name -%}
+{%- set title = item[0].title -%}
 {%- set account = item[0].account -%}
 
 {%- set config_directory = "/etc/default/guest" -%}
