--- a/files/guest.instances.inc.j2
+++ b/files/guest.instances.inc.j2
@@ -83,8 +83,8 @@
 {%- set memory_hole = memory_size + temp_cards.memory -%}
 {%- set memory_prealloc = item[0].memory_prealloc|default(4) -%}
 
-{%- set video_hardware = item[0].video_hardware -%}
-{%- set sound_hardware = item[0].sound_hardware -%}
+{%- set video_hardware = item[0].video_hardware|default('qxl') -%}
+{%- set sound_hardware = item[0].sound_hardware|default('hda') -%}
 
 {%- set looking_glass = item[0].looking_glass|default(true) -%}
 {%- set looking_glass_file = ivshmem_directory ~ '/looking_glass' -%}
