--- a/files/home/kmchan/.local/share/applications/firefox-test.desktop.j2
+++ b/files/home/kmchan/.local/share/applications/firefox-test.desktop.j2
@@ -3,9 +3,9 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 {% if account_firefox_jail_x11|default(false) -%}
-Exec=bash -c "exec firejail --profile=/home/kmchan/.config/firejail/firefox-test.profile --x11 --env=LD_PRELOAD=/home/kmchan/Software/firejail/fcitx/patch.so --env=FCITX_DISPLAY=$DISPLAY firefox -P Test --new-instance"
+Exec=bash -c "exec firejail --profile=/home/kmchan/.config/firejail/firefox-test.profile --x11 --env=LD_PRELOAD=/home/kmchan/Software/firejail/fcitx/patch.so --env=FCITX_DISPLAY=$DISPLAY firefox -P Test --marionette --new-instance"
 {% else -%}
-Exec=fcitx-proxy-launch firejail --profile=/home/kmchan/.config/firejail/firefox-test.profile firefox -P Test --new-instance
+Exec=fcitx-proxy-launch firejail --profile=/home/kmchan/.config/firejail/firefox-test.profile firefox -P Test --marionette --new-instance
 {% endif -%}
 
 Terminal=false
