Update Apache Configuration for test.kmchan3.space
The apache configuration of test.kmchan3.space is too strict to allow
simple deployment of PHP applications. Therefore, some configuration
options are relaxed.

--- a/files/etc/apache2/sites-available/local_test.kmchan3.space.conf.j2
+++ b/files/etc/apache2/sites-available/local_test.kmchan3.space.conf.j2
@@ -2,14 +2,14 @@
 
 
 <Directory /var/www/test.kmchan3.space/html>
-	Options None
-	AllowOverride None
+	Options SymLinksIfOwnerMatch
+	AllowOverride All
 	Require all granted
 </Directory>
 
 <Directory /var/www/test.kmchan3.space/scripts>
-	Options None
-	AllowOverride None
+	Options SymLinksIfOwnerMatch
+	AllowOverride All
 	Require all denied
 </Directory>
 
