--- a/files/usr/local/sbin/guest-initialize.j2
+++ b/files/usr/local/sbin/guest-initialize.j2
@@ -1,68 +1,5 @@
-{%- extends 'files/guest.instances.inc.j2' -%}{%- block body -%}
 #!/bin/bash
 
-if [[ ! -d "{{ guest_data_prefix }}" ]] ; then
-  install -o "root" -g "root" -m 755 -d "{{ guest_data_prefix }}"
-fi
+source "/usr/local/lib/guest/{{ item[0].name }}"
+prepare
 
-if [[ ! -d "{{ data_directory }}" ]] ; then
-  install -o "{{ account }}" -g "{{ account }}" -m 755 -d "{{ data_directory }}"
-fi
-
-if [[ ! -f "{{ bios_file }}" ]] ; then
-  install -o "{{ account }}" -g "{{ account }}" -m 0644 /usr/share/OVMF/OVMF_VARS.fd "{{ bios_file }}"
-fi
-
-if [[ ! -d "{{ guest_socket_prefix }}" ]] ; then
-  install -o "root" -g "root" -m 755 -d "{{ guest_socket_prefix }}"
-fi
-
-if [[ ! -d "{{ socket_directory }}" ]] ; then
-  install -o "{{ account }}" -g "{{ account }}" -m 0770 -d "{{ socket_directory }}"
-fi
-
-if [[ ! -d "{{ guest_ivshmem_prefix }}" ]] ; then
-  install -o "root" -g "root" -m 755 -d "{{ guest_ivshmem_prefix }}"
-fi
-
-if [[ ! -d "{{ ivshmem_directory }}" ]] ; then
-  install -o "{{ account }}" -g "{{ account }}" -m 0770 -d "{{ ivshmem_directory }}"
-fi
-
-{% if looking_glass %}
-if [[ ! -f "{{ looking_glass_file }}" ]] ; then
-  touch "{{ looking_glass_file }}"
-  chown "{{ account }}:{{ account }}" "{{ looking_glass_file }}"
-  chmod 660 "{{ looking_glass_file }}"
-fi
-
-{% endif %}
-{% if piper %}
-if [[ ! -f "{{ piper_playback_file }}" ]]; then
-  piper create "{{ piper_playback_file }}" "{{ piper_format }}" "{{ piper_channels }}" "{{ piper_rate }}" "{{ piper_period_time }}" 500 500 100
-  chown "{{ account }}:{{ account }}" "{{ piper_playback_file }}"
-  chmod 660 "{{ piper_playback_file }}"
-fi
-
-if [[ ! -f "{{ piper_capture_file }}" ]]; then
-  piper create "{{ piper_capture_file }}" "{{ piper_format }}" "{{ piper_channels }}" "{{ piper_rate }}" "{{ piper_period_time }}" 500 500 100
-  chown "{{ account }}:{{ account }}" "{{ piper_capture_file }}"
-  chmod 660 "{{ piper_capture_file }}"
-fi
-
-{% endif %}
-{% if scream %}
-if [[ ! -f "{{ scream_file }}" ]]; then
-  touch "{{ scream_file }}"
-  chown "{{ account }}:{{ account }}" "{{ scream_file }}"
-  chmod 660 "{{ scream_file }}"
-fi
-
-{% endif %}
-{% for network in networks %}
-ip tuntap add "{{ network.device }}" mode tap user "{{ account }}" group "{{ account }}"
-ip link set "{{ network.device }}" up
-ip link set "{{ network.device }}" master "{{ network.master }}"
-
-{% endfor %}
-{% endblock %}
