--- a/files/etc/systemd/system/guest.service.j2
+++ b/files/etc/systemd/system/guest.service.j2
@@ -1,21 +1,19 @@
-{%- extends 'files/guest.instances.inc.j2' -%}{%- block body %}
 
 [Unit]
-Description=Lanuch hypervisor daemon for {{ name }} guest virtual machine
+Description=Lanuch hypervisor daemon for {{ item[0].name }} guest virtual machine
 
 [Service]
 Type=simple
-ExecStart=/usr/local/sbin/{{ name }}-daemon
-ExecStartPre=/usr/local/sbin/{{ name }}-initialize
-ExecStopPost=/usr/local/sbin/{{ name }}-finalize
-User={{ account }}
-Group={{ account }}
+ExecStart=/usr/local/sbin/{{ item[0].name }}-daemon
+ExecStartPre=/usr/local/sbin/{{ item[0].name }}-initialize
+ExecStopPost=/usr/local/sbin/{{ item[0].name }}-finalize
+User={{ item[0].account }}
+Group={{ item[0].account }}
 WorkingDirectory=~
 PermissionsStartOnly=yes
 Nice=0
 UMask=0002
 PrivateTmp=yes
-LimitMEMLOCK={{ memory_hole }}G
+LimitMEMLOCK=infinity
 CPUAffinity=8-15
 
-{% endblock %}
