--- a/files/usr/local/bin/guest-attach-usb.j2
+++ b/files/usr/local/bin/guest-attach-usb.j2
@@ -1,10 +1,5 @@
-{%- extends 'files/guest.instances.inc.j2' -%}{%- block body -%}
 #!/bin/bash
 
-if [[ $# -ge 3 ]]; then
-  echo "device_add usb-host,id=$1,hostbus=$2,hostaddr=$3" | socat - "UNIX-CONNECT:{{ monitor_socket }}"
-else
-  echo "info usbhost" | socat - "UNIX-CONNECT:{{ monitor_socket }}"
-fi
+source "/usr/local/lib/guest/{{ item[0].name }}"
+attach_usb "$@"
 
-{% endblock %}
