--- a/files/usr/local/bin/guest-detach-usb.j2
+++ b/files/usr/local/bin/guest-detach-usb.j2
@@ -1,10 +1,5 @@
-{%- extends 'files/guest.instances.inc.j2' -%}{%- block body -%}
 #!/bin/bash
 
-if [[ $# -ge 1 ]]; then
-  echo "device_del $1" | socat - "UNIX-CONNECT:{{ monitor_socket }}"
-else
-  echo "info usbhost" | socat - "UNIX-CONNECT:{{ monitor_socket }}"
-fi
+source "/usr/local/lib/guest/{{ item[0].name }}"
+detach_usb "$@"
 
-{% endblock %}
