--- a/files/usr/local/bin/guest-monitor.j2
+++ b/files/usr/local/bin/guest-monitor.j2
@@ -1,6 +1,5 @@
-{%- extends 'files/guest.instances.inc.j2' -%}{%- block body -%}
 #!/bin/bash
 
-exec socat - "UNIX-CONNECT:{{ monitor_socket }}"
+source "/usr/local/lib/guest/{{ item[0].name }}"
+monitor
 
-{% endblock %}
