--- a/files/var/lib/guest/name/.asoundrc.j2
+++ b/files/var/lib/guest/name/.asoundrc.j2
@@ -1,4 +1,3 @@
-{%- extends 'files/guest.instances.inc.j2' -%}{%- block body -%}
 
 pcm_type.piper {
   lib /usr/local/lib/alsa/libasound_module_pcm_piper.so
@@ -6,8 +5,7 @@ pcm_type.piper {
 
 pcm.piper {
   type piper
-  playback {{ piper_playback_file }}
-  capture {{ piper_capture_file }}
+  playback {{ guest_socket_prefix }}/{{ item[0].name }}/playback
+  capture {{ guest_socket_prefix }}/{{ item[0].name }}/capture
 }
 
-{% endblock %}
