Revamp on PCIe Card Configuration
The previous PCIe, video card, VFIO and virtual machine configuration
system is suboptimal. The commit adjusts how configuration is done.
The new system also enables some further changes:

First of all, vfio device is now always binded during runtime when it
is actually needed. Also, custom commands can be executed before a
device is binded and after a device is unbinded.

Another change is that guests will bind/unbind associated vfio devices
automatically. Extra checks are added to the systemd service to avoid
starting a guest when any associated vfio device is already binded.

--- a/files/etc/X11/xorg.conf.d/10-devices.conf.j2
+++ b/files/etc/X11/xorg.conf.d/10-devices.conf.j2
@@ -1,27 +1,23 @@
 
 #
-# The file stops Xorg from scanning and using all video cards on the
-# system. It prevents cards that are configured for passthrough from
-# being locked up by X server.
-#
-# Furthermore, since video cards is no longer automatically scanned,
-# we need to configure them manually.
+# When not empty, the file stops Xorg from scanning and using all 
+# video cards on the system. It prevents cards that are configured
+# for passthrough from being locked up by X server. In such cases,
+# the video card will be configured manually.
 #
 
+{% if hardware_video_x11_autodetect|default(true) == false %}
 Section "ServerFlags"
   Option "AutoAddGPU" "false"
 EndSection
 
-{% for key, device in hardware_video.items() %}
-{% if device['type'] == 'primary' %}
 Section "Device"
-  Identifier "{{ device['name'] }}"
-  BusID "PCI:{{ device['address'][0]|pciaddr('xorg') }}"
-  Driver "{{ device['driver'] }}"
-{% if device['driver'] == 'intel' or device['driver'] == 'amdgpu' %}
+  Identifier "{{ hardware_pci_devices[hardware_video_device]['name'] }}"
+  BusID "PCI:{{ hardware_pci_devices[hardware_video_device]['addresses'][0]|pciaddr('xorg') }}"
+  Driver "{{ hardware_video_x11_driver }}"
+{% if hardware_video_x11_driver == 'intel' or hardware_video_x11_driver == 'amdgpu' %}
   Option "DRI" "3"
 {% endif %}
 EndSection
 {% endif %}
-{% endfor %}
 
