Fcitx Related Cleanup for Firejailed Apps
No fcitx hacks are needed for firejailed X applications when the
profile do not use either "x11" or "machine-id" options. Fcitx
resolves the private dbus connection in a two-step process. The
first step is to locate the file where the details of the private
connection is stored. It can be done by deriving the path from
Machine ID file and X display number. It can also be overridden
using the FCITX_DBUS_ADDRESS environment variable. The second
step is to parse the file, check the existence of fcitx/dbus
processes and connect to the abstract UNIX socket specified by
the file.

--- a/files/home/kmchan/.local/share/applications/firefox-private.desktop.j2
+++ b/files/home/kmchan/.local/share/applications/firefox-private.desktop.j2
@@ -2,12 +2,7 @@
 Encoding=UTF-8                                                                                                                                      
 Version=1.0
 Type=Application
-{% if account_firefox_jail_x11|default(false) -%}
-Exec=bash -c "exec firejail --profile=/home/kmchan/.config/firejail/firefox-private.profile --x11 --env=LD_PRELOAD=/home/kmchan/Software/firejail/fcitx/patch.so --env=FCITX_DISPLAY=$DISPLAY firefox -P Private --new-instance"
-{% else -%}
-Exec=fcitx-proxy-launch firejail --profile=/home/kmchan/.config/firejail/firefox-private.profile firefox -P Private --new-instance
-{% endif -%}
-
+Exec=firejail --profile=/home/kmchan/.config/firejail/firefox-private.profile firefox -P Private --new-instance
 Terminal=false
 Name=Mozilla Firefox (Private Profile)
 Icon=firefox
