--- a/files/home/kmchan/.local/share/applications/firefox-alternative.desktop.j2
+++ b/files/home/kmchan/.local/share/applications/firefox-alternative.desktop.j2
@@ -2,12 +2,7 @@
 Encoding=UTF-8
 Version=1.0
 Type=Application
-{% if account_firefox_jail_x11|default(false) -%}
-Exec=bash -c "exec firejail --profile=/home/kmchan/.config/firejail/firefox-alternative.profile --x11 --env=LD_PRELOAD=/home/kmchan/Software/firejail/fcitx/patch.so --env=FCITX_DISPLAY=$DISPLAY firefox -P Alternative -marionette --new-instance"
-{% else -%}
-Exec=fcitx-proxy-launch firejail --profile=/home/kmchan/.config/firejail/firefox-alternative.profile firefox -P Alternative -marionette --new-instance
-{% endif -%}
-
+Exec=firejail --profile=/home/kmchan/.config/firejail/firefox-alternative.profile firefox -P Alternative -marionette --new-instance
 Terminal=false
 Name=Mozilla Firefox (Alternative Profile)
 Icon=firefox
