--- a/files/home/kmchan/.local/share/applications/firefox-work.desktop.j2
+++ b/files/home/kmchan/.local/share/applications/firefox-work.desktop.j2
@@ -2,11 +2,7 @@
 Encoding=UTF-8                                                                                                                                      
 Version=1.0
 Type=Application
-{% if account_firefox_jail_x11|default(false) -%}
-Exec=bash -c "exec firejail --profile=/home/kmchan/.config/firejail/firefox-work.profile --x11 --env=LD_PRELOAD=/home/kmchan/Software/firejail/fcitx/patch.so --env=FCITX_DISPLAY=$DISPLAY firefox -P Work --new-instance"
-{% else -%}
-Exec=fcitx-proxy-launch firejail --profile=/home/kmchan/.config/firejail/firefox-work.profile firefox -P Work --new-instance
-{% endif -%}
+Exec=firejail --profile=/home/kmchan/.config/firejail/firefox-work.profile firefox -P Work --new-instance
 Terminal=false
 Name=Mozilla Firefox (Work Profile)
 Icon=firefox
