--- a/files/etc/apache2/sites-available/local_test.kmchan3.space.conf.j2
+++ b/files/etc/apache2/sites-available/local_test.kmchan3.space.conf.j2
@@ -21,7 +21,7 @@
 	Include /etc/apache2/proxy.off.inc
 
 	<FilesMatch ".+\.ph(ar|p|tml)$">
-		SetHandler "proxy:unix:/run/php/php7.2-fpm.test.kmchan3.space.sock|fcgi://localhost"
+		SetHandler "proxy:unix:/run/php/php{{ php_version }}-fpm.test.kmchan3.space.sock|fcgi://localhost"
 	</FilesMatch>
 </VirtualHost>
 {% if service_apache_http_proxy_port|default(8080) != false %}
@@ -34,7 +34,7 @@
 	Include /etc/apache2/proxy.on.inc
 
 	<FilesMatch ".+\.ph(ar|p|tml)$">
-		SetHandler "proxy:unix:/run/php/php7.2-fpm.test.kmchan3.space.sock|fcgi://localhost"
+		SetHandler "proxy:unix:/run/php/php{{ php_version }}-fpm.test.kmchan3.space.sock|fcgi://localhost"
 	</FilesMatch>
 </VirtualHost>
 {% endif -%}
@@ -51,7 +51,7 @@
 	SSLCertificateKeyFile /etc/letsencrypt/live/test.kmchan3.space/privkey.pem
 
 	<FilesMatch ".+\.ph(ar|p|tml)$">
-		SetHandler "proxy:unix:/run/php/php7.2-fpm.test.kmchan3.space.sock|fcgi://localhost"
+		SetHandler "proxy:unix:/run/php/php{{ php_version }}-fpm.test.kmchan3.space.sock|fcgi://localhost"
 	</FilesMatch>
 </VirtualHost>
 {% endif -%}
@@ -68,7 +68,7 @@
 	SSLCertificateKeyFile /etc/letsencrypt/live/test.kmchan3.space/privkey.pem
 
 	<FilesMatch ".+\.ph(ar|p|tml)$">
-		SetHandler "proxy:unix:/run/php/php7.2-fpm.test.kmchan3.space.sock|fcgi://localhost"
+		SetHandler "proxy:unix:/run/php/php{{ php_version }}-fpm.test.kmchan3.space.sock|fcgi://localhost"
 	</FilesMatch>
 </VirtualHost>
 {% endif %}
