--- a/files/etc/php5/fpm/pool.d/test.kmchan3.space.conf.j2
+++ b/files/etc/php5/fpm/pool.d/test.kmchan3.space.conf.j2
@@ -4,7 +4,7 @@
 user = kmchan
 group = kmchan
 
-listen = /run/php/php7.2-fpm.test.kmchan3.space.sock
+listen = /run/php/php{{ php_version }}-fpm.test.kmchan3.space.sock
 listen.owner = www-data
 listen.group = www-data
 
