Adjustment to demo.kmchan3.space Website
A few adjustments are made to the demo.kmchan3.space website like
renaming some names, enabling sudo and some other bugfixes.

--- a/files/etc/apache2/sites-available/local_demo.kmchan3.space.conf.j2
+++ b/files/etc/apache2/sites-available/local_demo.kmchan3.space.conf.j2
@@ -1,6 +1,18 @@
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
 
 
+<Directory /var/www/demo.kmchan3.space/html>
+	Options SymLinksIfOwnerMatch
+	AllowOverride All
+	Require all granted
+</Directory>
+
+<Directory /var/www/demo.kmchan3.space/projects>
+	Options SymLinksIfOwnerMatch
+	AllowOverride All
+	Require all denied
+</Directory>
+
 <VirtualHost _default_:{{ service_apache_http_port|default(80) }}>
 	ServerName demo.kmchan3.space
 	DocumentRoot "/var/www/demo.kmchan3.space/html"
