--- a/files/etc/php5/fpm/pool.d/demo.kmchan3.space.conf.j2
+++ b/files/etc/php5/fpm/pool.d/demo.kmchan3.space.conf.j2
@@ -1,8 +1,8 @@
 
 [demo.kmchan3.space]
 
-user = demo
-group = demo
+user = www-demo
+group = www-demo
 
 listen = /run/php/php{{ php_version }}-fpm.demo.kmchan3.space.sock
 listen.owner = www-data
