Adjustment to test.kmchan3.space Website
A few adjustments are made to the test.kmchan3.space website like
renaming some names, enabling sudo and some other bugfixes.

--- a/files/etc/apache2/sites-available/local_test.kmchan3.space.conf.j2
+++ b/files/etc/apache2/sites-available/local_test.kmchan3.space.conf.j2
@@ -10,7 +10,7 @@
 	Require ip 192.168.0.0/16
 </Directory>
 
-<Directory /var/www/test.kmchan3.space/scripts>
+<Directory /var/www/test.kmchan3.space/projects>
 	Options SymLinksIfOwnerMatch
 	AllowOverride All
 	Require all denied
