--- a/files/etc/php5/fpm/pool.d/test.kmchan3.space.conf.j2
+++ b/files/etc/php5/fpm/pool.d/test.kmchan3.space.conf.j2
@@ -1,8 +1,8 @@
 
 [test.kmchan3.space]
 
-user = kmchan
-group = kmchan
+user = www-test
+group = www-test
 
 listen = /run/php/php{{ php_version }}-fpm.test.kmchan3.space.sock
 listen.owner = www-data
