Adjustment to desktop.kmchan3.space Confiugration
Some minor adjustments are made to the configuration of virtual host
desktop.kmchan3.space.

--- a/files/etc/apache2/sites-available/local_desktop.kmchan3.space.conf.j2
+++ b/files/etc/apache2/sites-available/local_desktop.kmchan3.space.conf.j2
@@ -3,12 +3,18 @@
 
 <VirtualHost _default_:{{ service_apache_http_port|default(80) }}>
 	ServerName desktop.kmchan3.space
+	DocumentRoot /var/www/html
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	Include /etc/apache2/proxy.off.inc
 </VirtualHost>
 {% if service_apache_http_proxy_port|default(8080) != false %}
 
 <VirtualHost _default_:{{ service_apache_http_proxy_port|default(8080) }}>
 	ServerName desktop.kmchan3.space
+	DocumentRoot /var/www/html
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	Include /etc/apache2/proxy.on.inc
 </VirtualHost>
 {% endif -%}
@@ -16,6 +22,9 @@
 
 <VirtualHost _default_:{{ service_apache_https_port|default(443) }}>
 	ServerName desktop.kmchan3.space
+	DocumentRoot /var/www/html
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	Include /etc/apache2/proxy.off.inc
 	SSLEngine On
 	SSLCertificateFile /etc/letsencrypt/live/desktop.kmchan3.space/fullchain.pem
@@ -26,6 +35,9 @@
 
 <VirtualHost _default_:{{ service_apache_https_proxy_port|default(8443) }}>
 	ServerName desktop.kmchan3.space
+	DocumentRoot /var/www/html
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	Include /etc/apache2/proxy.on.inc
 	SSLEngine On
 	SSLCertificateFile /etc/letsencrypt/live/desktop.kmchan3.space/fullchain.pem
