Remove Python 2 dict.iteritems Calls
In Python 3, the dict object no longer provides the iteritems method
for looping over the entries. The new method, items, is provided
instead. The change causes a rarely-used blockdev playbook to break.

This commit fixes the problem by migrating iteritems method to the
newer items method.

--- a/files/etc/udev/rules.d/99-blockdev.rules.j2
+++ b/files/etc/udev/rules.d/99-blockdev.rules.j2
@@ -11,7 +11,7 @@ SUBSYSTEM=="block", ENV{ID_FS_UUID}=="{{ mount.uuid }}", ENV{UDISKS_NAME}="{{ bl
 {% endif %}
 {% endfor %}
 
-{% for name, device in ansible_devices.iteritems() %}
+{% for name, device in ansible_devices.items() %}
 {% for pvid in device.links.ids if pvid is match("lvm-pv-uuid-.*") %}
 {% for cryptid in device.links.ids if cryptid is match("dm-uuid-CRYPT-.*") %}
 SUBSYSTEM=="block", ENV{DM_UUID}=="{{ cryptid|replace('dm-uuid-', '', 1) }}", ENV{UDISKS_IGNORE}="1"
