Set Default Value for Config Variable
Currently the config variable is referenced without setting a proper
default value with "default" filter. It may cause problem when the
variable is not set.

--- a/files/etc/modules-load.d/sensor.conf.j2
+++ b/files/etc/modules-load.d/sensor.conf.j2
@@ -3,7 +3,7 @@
 # Sensor support
 #
 
-{% for module in hardware_sensor_modules %}
+{% for module in hardware_sensor_modules|default([]) %}
 {{ module }}
 {% endfor %}
 
