--- a/files/etc/apache2/conf-available/apache2-overrides.conf.j2
+++ b/files/etc/apache2/conf-available/apache2-overrides.conf.j2
@@ -84,3 +84,35 @@ LimitRequestBody 12582912
 LimitXMLRequestBody 524288
 
 
+#########################################################################
+#
+# Always log the remote IP address instead of remote hostname.
+#
+
+HostnameLookups Off
+
+
+#########################################################################
+#
+# Patch the log format to include the actual remote IP in the logs. It
+# is required since the original `%h` tag is not patched by either
+# mod_proxy_protocol or mod_remoteip.
+#
+
+LogFormat "%v:%p %a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
+LogFormat "%a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
+LogFormat "%a %l %u %t \"%r\" %>s %O" common
+LogFormat "%{Referer}i -> %U" referer
+LogFormat "%{User-agent}i" agent
+
+
+#########################################################################
+#
+# Sanitize the default options for the /var/www location.
+#
+
+<Directory /var/www>
+	Options -Indexes
+</Directory>
+
+
