--- a/files/etc/apache2/conf-available/security-overrides.conf.j2
+++ b/files/etc/apache2/conf-available/security-overrides.conf.j2
@@ -1,15 +1,22 @@
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
 
 
-##########################################################################
+#########################################################################
 #
-# Ensure that subversion files are not served. These files may contain
-# data which should be private.
+# Ensure that the server will only report Apache in response header, but
+# not extra details like version, build or operating system.
 #
 
-<DirectoryMatch "/\.svn">
-	Require all denied
-</DirectoryMatch>
+ServerTokens ProductOnly
+
+
+##########################################################################
+#
+# Ensure that the server will not attach signature information to server
+# generated pages.
+#
+
+ServerSignature Off
 
 
 ##########################################################################
