--- a/files/etc/apache2/proxy.off.inc.j2
+++ b/files/etc/apache2/proxy.off.inc.j2
@@ -1,3 +1,3 @@
 
-{{ (service_apache_proxy_protocol_rules|select('distribution', distro, release, attribute='requires')|first)['directive'] }} Off
+RemoteIPProxyProtocol Off
 
