--- a/files/etc/systemd/system/php5-fpm.service.d/local.conf.j2
+++ b/files/etc/systemd/system/php5-fpm.service.d/local.conf.j2
@@ -1,28 +1,67 @@
 
 [Service]
-NoNewPrivileges=yes
-ProtectProc=invisible
-ProtectSystem=strict
-ProtectHome=yes
-ProtectClock=yes
-ProtectKernelTunables=yes
-ProtectKernelModules=yes
-ProtectControlGroups=yes
-PrivateTmp=yes
-PrivateDevices=yes
-PrivateIPC=yes
-LockPersonality=yes
-ReadWritePaths=-/run
-ReadWritePaths=-/var/lib/php
-ReadWritePaths=-/var/log
-ReadWritePaths=-/var/run
-ReadWritePaths=-/var/www
+CapabilityBoundingSet=~CAP_AUDIT_CONTROL
+CapabilityBoundingSet=~CAP_AUDIT_READ
+CapabilityBoundingSet=~CAP_AUDIT_WRITE
+CapabilityBoundingSet=~CAP_BLOCK_SUSPEND
+CapabilityBoundingSet=~CAP_FOWNER
+CapabilityBoundingSet=~CAP_FSETID
+CapabilityBoundingSet=~CAP_IPC_LOCK
+CapabilityBoundingSet=~CAP_IPC_OWNER
+CapabilityBoundingSet=~CAP_KILL
+CapabilityBoundingSet=~CAP_LEASE
+CapabilityBoundingSet=~CAP_LINUX_IMMUTABLE
+CapabilityBoundingSet=~CAP_MAC_ADMIN
+CapabilityBoundingSet=~CAP_MAC_OVERRIDE
+CapabilityBoundingSet=~CAP_MKNOD
+CapabilityBoundingSet=~CAP_NET_ADMIN
+CapabilityBoundingSet=~CAP_NET_BROADCAST
+CapabilityBoundingSet=~CAP_NET_RAW
+CapabilityBoundingSet=~CAP_SETFCAP
+CapabilityBoundingSet=~CAP_SETPCAP
+CapabilityBoundingSet=~CAP_SYS_ADMIN
+CapabilityBoundingSet=~CAP_SYS_BOOT
+CapabilityBoundingSet=~CAP_SYS_CHROOT
+CapabilityBoundingSet=~CAP_SYS_MODULE
+CapabilityBoundingSet=~CAP_SYS_NICE
+CapabilityBoundingSet=~CAP_SYS_PACCT
+CapabilityBoundingSet=~CAP_SYS_PTRACE
+CapabilityBoundingSet=~CAP_SYS_RAWIO
+CapabilityBoundingSet=~CAP_SYS_RESOURCE
+CapabilityBoundingSet=~CAP_SYS_TIME
+CapabilityBoundingSet=~CAP_SYS_TTY_CONFIG
+InaccessiblePaths=-/boot
 InaccessiblePaths=-/cdrom
+InaccessiblePaths=-/lost+found
 InaccessiblePaths=-/media
 InaccessiblePaths=-/mnt
 InaccessiblePaths=-/run/media
 InaccessiblePaths=-/var/run/media
 InaccessiblePaths=-/var/run/user
+LockPersonality=yes
+NoNewPrivileges=yes
+ProtectClock=yes
+ProtectControlGroups=yes
+ProtectHome=yes
+ProtectHostname=yes
+ProtectKernelLogs=yes
+ProtectKernelModules=yes
+ProtectKernelTunables=yes
+ProtectProc=invisible
+ProtectSystem=strict
+PrivateDevices=yes
+PrivateIPC=yes
+PrivateTmp=yes
+ReadWritePaths=-/run
+ReadWritePaths=-/var/lib/php
+ReadWritePaths=-/var/log
+ReadWritePaths=-/var/run
+ReadWritePaths=-/var/www
+RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
+RestrictNamespaces=yes
+RestrictRealtime=yes
+RestrictSUIDSGID=true
+SystemCallArchitectures=native
 SystemCallFilter=~@clock
 SystemCallFilter=~@cpu-emulation
 SystemCallFilter=~@debug
@@ -31,6 +70,7 @@ SystemCallFilter=~@mount
 SystemCallFilter=~@obsolete
 SystemCallFilter=~@raw-io
 SystemCallFilter=~@reboot
+SystemCallFilter=~@resources
 SystemCallFilter=~@swap
-SystemCallArchitectures=native
+UMask=0002
 
