--- a/files/etc/firejail/allow-connection-to-internet.net.j2
+++ b/files/etc/firejail/allow-connection-to-internet.net.j2
@@ -10,14 +10,15 @@
 :FORWARD DROP [0:0]
 :OUTPUT DROP [0:0]
 -A INPUT -i lo -j ACCEPT
--A INPUT -s {{ software_firejail_gateway }} -j ACCEPT
+-A INPUT -s {{ software_firejail_network_address|ipaddr('address') }} -j ACCEPT
 -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
 -A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT
 -A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT
 -A INPUT -p icmp --icmp-type echo-request -j ACCEPT
 -A OUTPUT -o lo -j ACCEPT
 -A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
--A OUTPUT -p udp --dport 53 -j ACCEPT
+-A OUTPUT -d {{ software_firejail_network_address|ipaddr('address') }} -p tcp --dport 53 -j ACCEPT
+-A OUTPUT -d {{ software_firejail_network_address|ipaddr('address') }} -p udp --dport 53 -j ACCEPT
 -A OUTPUT -d 10.0.0.0/8 -j DROP
 -A OUTPUT -d 172.16.0.0/12 -j DROP
 -A OUTPUT -d 192.168.0.0/16 -j DROP
