--- a/files/etc/network/interfaces.d/firejail.j2
+++ b/files/etc/network/interfaces.d/firejail.j2
@@ -2,8 +2,8 @@
 {% if software_firejail_enabled|default(false) == true %}
 auto firejail
 iface firejail inet static
-  address {{ software_firejail_gateway }}
-  netmask {{ software_firejail_netmask }}
+  address {{ software_firejail_network_address|ipaddr('address') }}
+  netmask {{ software_firejail_network_address|ipaddr('netmask') }}
   mtu 9000
   bridge_ports none
 {% endif %}
